2006-12-27  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS
	* fvwm/ConfigFvwmMenuDefaults:
	* fvwm/fvwm.c (SetRCDefaults):
	* fvwm/menus.c (parse_menu_action):
	* fvwm/fvwm.1.in:
	rename menu action to menu bindings and make menu binding commands
	more verbose.  Move "Mouse 0 M A MenuSelectItem" to SetRCDefaults to
	ensure basic function with ConfigFvwmMenuDefaults missing.

2006-12-27  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/menus.c (menuShortcuts):
	fixed compiler warning.

2006-12-27  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/fvwm.1.in:
	corrected mis-spelling

	* AUTHORS:
	* NEWS:
	* fvwm/fvwm.1.in:
	* fvwm/menus.h:
	* fvwm/menus.c (handle_emacs_bindings, parse_menu_action)
	(menuShortcuts, __mloop_handle_event, menu_binding):
	* fvwm/bindings.c (ParseBinding):
	* fvwm/Makefile.am (config_DATA):
	* fvwm/ConfigFvwmDefaults:
	* fvwm/ConfigFvwmMenuDefaults:
	fully configurable mouse any key bindings for menu navigation.

2006-12-22  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/virtual.c (HandlePaging):
	removed bogus comment

	* fvwm/move_resize.c (__move_loop):
	cleanup
	(__resize_window):
	allow paging during resize with "EdgeScroll 0 0" as documented in the
	man page
	fixed disappearing windows with "maximize; resize - abort; unmaximize"

	* fvwm/fvwm.h (FvwmWindow):
	* fvwm/add_window.c (AddWindow):
	* fvwm/add_window.c (setup_frame_window):
	* fvwm/add_window.c (setup_parent_window)
	* fvwm/borders.c (border_draw_decorations):
	* fvwm/borders.c (border_draw_one_border_part):
	* fvwm/borders.c (border_get_parts_and_pos_to_draw)
	* fvwm/borders.c (border_get_titlebar_descr)
	* fvwm/builtins.c (__remove_window_decors):
	* fvwm/conditional.c (MatchesConditionMask):
	* fvwm/events.c (HandleMapNotify):
	* fvwm/events.c (HandleMapRequestKeepRaised)
	* fvwm/events.c (HandlePropertyNotify):
	* fvwm/events.c (HandleShapeNotify):
	* fvwm/events.c (__cr_detect_icccm_move)
	* fvwm/events.c (__cr_get_grav_position):