@@ -1,3 +1,8 @@
+2006-12-28  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
+
+	* fvwm/geometry.c (maximize_adjust_offset):
+	fixed calculations of normal geometry when maximized
+
 2006-12-27  Viktor Griph  <griph@dd.chalmers.se>
 
 	* NEWS
